# PetGram

./: .env  .gitignore  pyproject.toml  requirements.txt
authentication/: forms.py  views.py
config/: settings.py  urls.py
media/video/: nails.mov
notification/: admin.py  models.py  views.py
notification/migrations/: 0001_initial.py  0002_auto_20210405_2136.py  0002_auto_20210406_0218.py  0002_auto_20210408_0125.py  0002_auto_20210408_1557.py  0002_auto_20210408_1705.py  0002_auto_20210408_2117.py  0002_initial.py  0003_remove_notification_sender.py
post/: admin.py  forms.py  models.py  views.py
post/migrations/: 0001_initial.py  0002_auto_20210408_1343.py  0002_auto_20210408_1557.py  0002_auto_20210408_2117.py  0002_initial.py  0002_post_display_name.py  0003_auto_20210406_1121.py  0003_auto_20210408_0136.py
src/static_root/css/: style.css
static/css/: style.css
templates/: 404.html  500.html  delete_post.html  edit_profile.html  generic_form.html  hashtag.html  homepage.html  nav.html  notification.html  post_detail.html  profile.html  search_bar.html  upload_form.html  users_feed.html
user_profile/: admin.py  forms.py  models.py  views.py
user_profile/migrations/: 0001_initial.py
