[tool.poetry]
name = "petgram2"
version = "0.1.0"
description = ""
authors = ["Elijah Camara <elijahjohncamara@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2"
python-dotenv = "^0.17.1"
django-tagulous = "^1.1.0"
Pillow = "^8.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
